# aws-dsta-aiml-hackathon

./: README.md  docker-compose.yaml  output.txt
backend/: .gitignore  Dockerfile  pyproject.toml  run.sh
backend/backend/: main.py  settings.py
backend/backend/controllers/: predict_audio.py  predict_image.py  predict_social_media.py  predict_text.py  predict_video.py  translate.py  upload.py
backend/backend/controllers/social_media/: __init__.py  base.py  telegram.py  youtube.py
backend/backend/dependencies/: aws_ml.py  comprehend.py  rekognition.py  storage.py  transcribe.py  translate.py  utils.py
backend/backend/models/: models.py
backend/backend/routers/: predict.py  router.py  telegram.py
copilot/: .workspace
copilot/backend/: manifest.yml
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/server/: package-lock.json  package.json  server.js
frontend/server/controller/: app.js
frontend/src/: App.js  index.js  theme.js
frontend/src/components/: TableSummary.jsx  WidgetWrapper.jsx
frontend/src/scenes/home/: index.jsx
frontend/src/scenes/nav/: index.jsx
frontend/src/scenes/widgets/: AllPostsWidget.jsx  InputPostWidget.jsx  InputPostWidget.jsx.backup  PostWidget.jsx
frontend/src/state/: index.js
models/: [Test-set] toxic-comments.ipynb  [Train-set] toxic-comments.ipynb
