[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tien-Cheng <tiencheng@protonmail.com>", "cheongjiyiu <cheongjiyiu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.94.1"
boto3 = "^1.26.90"
uvicorn = "^0.21.0"
requests = "^2.28.2"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
